<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--  <string name="firebase_url">https://glaring-torch-3975.firebaseio.com</string> </-->
    <string name="firebase_url">https://da401a.firebaseio.com</string>

    <string name="username">werra89@gmail.com</string>
    <string name="password">tolle</string>

    <string name="app_name">Anonymous</string>
    <string name="about">Anonymous \n Version 0.1 \n Simple chat app made by Soded A.</string>
    <string name="app_version">Version 0.1</string>
    <string name="app_description">Simple chat app made by Soded A.</string>


    <string name="emailField">E-mail address</string>
    <string name="passwordField">Password</string>
    <string name="confirmPasswordField">Confirm Password</string>
    <string name="actionSettings">Settings</string>
    <string name="about_app">About</string>
    <string name="text_settings">Settings fragment. This will be updated in the next version of the app.</string>

    <string name="titleLoginActivity">LoginActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="action_settings">Settings</string>
    <string name="loginButton">Login</string>
    <string name="CreateButton">Create Account</string>
    <string name="security_question_message">Please provide a security question and an answer for authentication,
                                             incase you need to revive your password</string>d
    <string name="hint_security_message">Security message</string>
    <string name="hint_security_answer">Answer</string>
    <string name="security_msg_reset_pw">To revive your password, you must answer this security question</string>

    <string-array name="security_questions_array">
        <item>What is the answer to all questions?</item>
        <item>what was your first drugdealer?</item>
        <item>what was your dream job as a child?</item>
        <item>which chemical element is your initials?</item>
        <item>how would you kill Justin Bieber? (if allowed)</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="RevivePasswordButton">Revive Password</string>
    <string name="title_activity_template_menu">TemplateMenuActivity</string>
    <string name="create_group">Create group</string>

</resources>
