<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_gravity="center"
        android:padding="@dimen/activity_vertical_margin"
        android:src="@drawable/face_placeholder" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailField" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordField"
        android:padding="@dimen/activity_vertical_margin"
        android:password="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/security_question_message" />

    <EditText
        android:id="@+id/securityQuestionField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_security_message" />

    <EditText
        android:id="@+id/securityAnswerField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_security_answer" />

    <Button
        android:id="@+id/CreateAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="login"
        android:text="@string/CreateButton" />
</LinearLayout>